--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -14,7 +14,7 @@ About Us
 <!-- A to PC Logo -->
 <div class="row justify-content-center">
     <div class="col-md-8 text-center">
-        <img src="{{ MEDIA_URL }}logo1.png" class="img-fluid" alt="A to PC">
+        <img src="{{ MEDIA_URL }}logo1.webp" class="img-fluid" alt="A to PC">
         <h2 class="fw-bold mt-3">About Us</h2>
     </div>
 </div>
