--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@ Welcome!
 <div class="row">
     <div class="col-12 text-center">
         <a href="{% url 'products' %}?category=latest_deals,clearance" aria-label="Go to products page">
-            <img src="{{ MEDIA_URL }}home-splash-img.png" class="welcome-img"
+            <img src="{{ MEDIA_URL }}home-splash-img.webp" class="welcome-img"
                 alt="Shop the latest tech deals with A to PC">
         </a>
     </div>
