--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                 <!-- Logo -->
                 <div>
                     <a href="{% url 'home' %}" class="nav-link">
-                        <img src="{{ MEDIA_URL }}logo1.png" class="logo-img mx-0" alt="A to PC"
+                        <img src="{{ MEDIA_URL }}logo1.webp" class="logo-img mx-0" alt="A to PC"
                             aria-label="Go to home page">
                     </a>
                 </div>
