Fix: Add aria-label tag to search buttons to improve accessability

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                 <div class="search px-1">
                     <form method="get" action="{% url 'products' %}">
                         <div class="input-group border-black nav-item">
-                            <button class="input-group-text" type="submit"><i class="fas fa-search"></i></button>
+                            <button class="input-group-text" type="submit" aria-label="Search the site"><i class="fas fa-search"></i></button>
                             <input class="form-control border" type="search" name="q" placeholder="Search for products">
                         </div>
                     </form>
