--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -118,7 +118,7 @@
             <div class="input-group border-black nav-item">
                 <input class="form-control" type="search" name="q" placeholder="Search for products"
                     aria-label="Search">
-                <button class="input-group-text" type="submit"><i class="fas fa-search"></i></button>
+                <button class="input-group-text" type="submit" aria-label="Search the site"><i class="fas fa-search"></i></button>
             </div>
         </form>
     </div>
