--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -36,7 +36,7 @@ Your Wishlist
                         <p class="mt-3">Price: £{{ item.price }}</p>
                         <form class="form text-center mt-5" action="{% url 'add_to_bag' item.id %}" method="POST">
                             {% csrf_token %}
-                            <input type="hidden" name="quantity" type="Number" value="1">
+                            <input name="quantity" type="Number" value="1" class="d-none">
                             <input type="submit" class="btn btn-success" value="Add to Bag">
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             <a href="{% url 'add_remove_wishlist' item.id %}" class="btn btn-danger"><i class="fa-solid fa-xmark"></i></a>
@@ -117,7 +117,7 @@ Your Wishlist
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     // Scroll to top of the page on click
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
