Fix: fix missing semi-colons in js for validation

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -139,8 +139,8 @@ My bag
 <script>
     // Scroll to top of the page on click
     $('.btt-link').click(function (e) {
-        window.scrollTo(0, 0)
-    })
+        window.scrollTo(0, 0);
+    });
 </script>
 {% include 'products/includes/quantity_input_script.html' %}
 
