--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -157,8 +157,8 @@ Browse Our Store
 <script>
     // Scroll to top of the page on click
     $('.btt-link').click(function (e) {
-        window.scrollTo(0, 0)
-    })
+        window.scrollTo(0, 0);
+    });
 </script>
 
 <script>
@@ -182,6 +182,6 @@ Browse Our Store
 
             window.location.replace(currentUrl);
         }
-    })
+    });
 </script>
 {% endblock %}
